--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"husky": "=0.14.3",
 		"lint-staged": "=5.0.0",
 		"mocha": "=4.0.1",
+		"mocha-bdd": "=0.1.0",
 		"nyc": "=11.3.0",
 		"prettier": "=1.8.2",
 		"should": "=13.1.3",
